--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,73 @@
 @import url('reset.css');
+
+body {
+    background-color: black;
+}
+
+.banner{
+    background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, .6)), url(../images/banner.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 600px;
+    padding-top: 60px;
+    border-bottom: 1px solid #33A8DB80;
+}
+ 
+.banner .banner-content{    
+    color: white;
+    text-align: center;
+    width: 600px;
+    margin: auto;
+}
+
+.banner .logo{
+    width: 260px;
+    height: 260px;
+    margin: auto;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, .2);
+    padding: 16px;
+    margin-bottom: 16px;
+}
+
+.banner .logo img {
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  
+.banner h1{
+    font-size: 40px;
+    color: transparent;
+    font-weight: 900;
+    text-transform: uppercase;
+    background: -webkit-linear-gradient(#33A8DB, #1472B7);
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+
+.banner p {
+    /*color: white;*/
+    font-weight: 400;
+    font-size: 20px;
+    margin: 16px 0 24px;
+    text-align: center;
+}
+
+.banner button{
+    /*fonte*/
+    font-size: 16px;
+    font-weight: 900;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    color:#31A8DD;
+    padding: 16px 32px;
+    /*borda*/
+    background-color: inherit;
+    border-image: linear-gradient(#3BA1CD, #1572B7);
+    border-image-slice: 10;
+    border-radius: 30px;
+}
+
+  
