--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@ body {
     background-color: black;
 }
 
+section {
+    margin: 100px auto;
+  }
+
 .banner{
     background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, .6)), url(../images/banner.png);
     background-size: cover;
@@ -48,7 +52,6 @@ body {
 }
 
 .banner p {
-    /*color: white;*/
     font-weight: 400;
     font-size: 20px;
     margin: 16px 0 24px;
@@ -70,4 +73,39 @@ body {
     border-radius: 30px;
 }
 
-  
+#course-content{
+    text-align: center;
+    width: 800px;
+}
+
+#course-content h2{
+    font-size: 32px;
+    font-weight: 700px;
+    letter-spacing: 4px;
+    color: #33A8DB;
+    text-transform: uppercase;
+    margin-bottom: 24px;
+
+}
+
+#course-content p{
+    font-size: 16px;
+    color: white;
+    margin-bottom: 24px;
+}
+
+#course-content .module {
+    font-size: 16px;
+    color: white;
+    width: 530px;
+    padding: 16px;
+    background-color: #252525;
+    margin: 0 auto 24px;
+    border-radius: 100px;
+    border: 1px solid #33A8DB;
+    box-shadow: inset -5px 6px 8px rgba(0, 0, 0, .7) 
+}
+
+#course-content .module span{
+    color: #33A8DB;
+}
